# thonny-data_visualization

./: .gitignore  LICENSE  README.md  Usage_manual.md  exemple.py  pyproject.toml  setup.py
thonnycontrib/: Network_view.py
thonnycontrib/Network/: DB.py  graphic.py
thonnycontrib/data_visualization/: Network_view.py  __init__.py  graphical_view.py  hierarchic_view.py  hierarchical_view.py  locals_variables_view.py  representation_format.py  sender.py
thonnycontrib/data_visualization/Graphical/: DB.py  graphic.py
thonnycontrib/data_visualization/Network/: DB.py  graphic.py
